@@ -1,1 +1,11 @@
 # Literalnie
+
+
+## jak zbudować
+
+
+## jak uruchomić
+
+java -jar MojaAplikacja.jar
+
+java --enable-preview -jar projekt.jar
